cabal-version: 2.2
name:
  hflow
version:
  0.1
synopsis:
  parse network flow in haskell
description:
  parse network flow in haskell
homepage:
  https://github.com/chessai/hflow
bug-reports:
  https://github.com/chessai/hflow/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data, Parsing, Network, Web
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5, GHC == 8.8.1

library
  hs-source-dirs:
    src
  exposed-modules:
    Hflow
    Hflow.NetFlow5
  build-depends:
    , base >= 4.12 && < 4.14
    , byte-order >= 0.1 && < 0.2
    , byteslice >= 0.1 && < 0.2
    , contiguous >= 0.4.0.1 && < 0.5
    , ip >= 1.5 && < 1.6
    , mtl >= 2.2 && < 2.3
    , primitive >= 0.7 && < 0.8
    , primitive-unaligned >= 0.1 && < 0.2
    , transformers >= 0.5 && < 0.6
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/hflow.git
